--- a/407p/css/style.css
+++ b/407p/css/style.css
@@ -113,6 +113,10 @@ body
 
 /* Main menu */
 
+
+
+  
+
 #menu
 {
 	width: 100%;
@@ -218,7 +222,7 @@ body
 {    
     padding: 10px;
 	height: 10px;
-	width: 130px;
+	width: 180px;
 	height: auto;
     line-height: 1;
     display: block;
@@ -313,4 +317,16 @@ body .one .bsa_it_p{display:none;}
 body #bsap_aplink,body #bsap_aplink:hover{display:block;font-size:9px;margin: -15px 0 0 0;text-align:right;}
 body .one .bsa_it_ad .bsa_it_d{font-size: 11px;}
 body .one{overflow: hidden}
+
+#name p 
+{
+	float: left;
+	height: 25px;
+	padding: 0 25px;
+	color: green;
+	text-transform: uppercase;
+	font: bold 12px/25px Arial, Helvetica;
+	text-decoration: none;
+	text-shadow: 0 1px 0 green;
+}     
 /* Стили для меню */
